Fix alignment of Perspectives MT translated message tooltip (#2764)

--- a/blocks/article-marquee/article-marquee.css
+++ b/blocks/article-marquee/article-marquee.css
@@ -351,6 +351,7 @@
   }
 
   .article-marquee-ai-translated-tooltip-container {
+    top: -1px;
     position: relative;
   }
 
